--- a/Slack-Apps/week1/homework/responses/1.4-basic-slack-app.md
+++ b/Slack-Apps/week1/homework/responses/1.4-basic-slack-app.md
@@ -1,6 +1,6 @@
 # Coding an App
 
- You will be building your first app, which is a bot that listens for and responds to specific text in chats. If you are having trouble, refer to [this article](https://slack.dev/bolt-js/tutorial/getting-started#:~:text=%20Getting%20started%20with%20Bolt%20for%20JavaScript%20,handled%2C%20it%E2%80%99s%20time%20to%20set%20up...%20More%20%E2%80%A9https://slack.dev/bolt-js/tutorial/getting-started) as an example of another simple app. 
+ You will be building your first app, which is a bot that listens for and responds to specific text in chats. If you are having trouble, refer to [this article](https://slack.dev/bolt-js/tutorial/getting-started#:~:text=%20Getting%20started%20with%20Bolt%20for%20JavaScript%20,handled%2C%20it%E2%80%99s%20time%20to%20set%20up...%20More%20%E2%80%A9https://slack.dev/bolt-js/tutorial/getting-started) as an example of another simple app. Make sure that your app is set up (ie. ngrok is installed and running, )
 
 ### Setting up environment variables
 
@@ -56,7 +56,7 @@ Go to the [Slack Events API](https://api.slack.com/events) and find the event fo
 
 Now it's time to create a new channel to remind new members to introduce themselves. To do this, [create a channel](https://slack.com/help/articles/201402297-Create-a-channel) in your workspace and open it up. In your browser URL, you can find the channel ID as the only code starting with a 'C'.
 
-![Finding a channel's id](./channel-id.png)
+![Finding a channel's id](../Gifs_Images/channel-id.png)
 
 Make sure to save this ID as a **global variable**. To actually message the user, use the following code:
 
