--- a/Slack-Apps/week1/homework/responses/1.4-basic-slack-app.md
+++ b/Slack-Apps/week1/homework/responses/1.4-basic-slack-app.md
@@ -56,7 +56,7 @@ Go to the [Slack Events API](https://api.slack.com/events) and find the event fo
 
 Now it's time to create a new channel to remind new members to introduce themselves. To do this, [create a channel](https://slack.com/help/articles/201402297-Create-a-channel) in your workspace and open it up. In your browser URL, you can find the channel ID as the only code starting with a 'C'.
 
-![Finding a channel's id](../Gifs_Images/channel-id.png)
+![Finding a channel's id](./Gifs_Images/channel-id.png)
 
 Make sure to save this ID as a **global variable**. To actually message the user, use the following code:
 
