slack week4 issues edited

--- a/Slack-Apps/week4/homework/responses/4.1-express.md
+++ b/Slack-Apps/week4/homework/responses/4.1-express.md
@@ -1,6 +1,6 @@
 # ⚡️Express
 
-This week will involve using a popular JavaScript framework called Express. Frameworks essentially give you a fundamental structure that you can build on without starting completely from scratch. For example, Bolt is also a framework! 
+This week will involve using a popular JavaScript framework called Express. Frameworks give you a fundamental structure that you can build on without starting completely from scratch. For example, Bolt is also a framework. 
 
 
 
