--- a/Slack-Apps/week4/homework/responses/4.2-webhooks.md
+++ b/Slack-Apps/week4/homework/responses/4.2-webhooks.md
@@ -4,7 +4,7 @@ Webhooks are applications that send other apps useful information. They are extr
 
 ## 🧠Reading
 
-Read [this article](https://sendgrid.com/blog/whats-webhook/). When you're done, research a couple webhooks and comment some ideas for a Slack app using some of them. Refer to [this site](https://www.programmableweb.com/news/33-webhook-apis-assembla-mailchimp-and-podio/2013/09/04) following sites for some webhooks.
+Read [this article](https://sendgrid.com/blog/whats-webhook/). When you're done, research a couple webhooks and comment some ideas for a Slack app using some of them. Refer to [this site](https://www.programmableweb.com/news/33-webhook-apis-assembla-mailchimp-and-podio/2013/09/04)  for some popular webhooks.
 
 ## 🔨Creating Your Own Webhook
 
@@ -21,12 +21,6 @@ Once you have created a repository, navigate to the settings page from the dashb
 Next, start your Slack app and create an ExpressReceiver object. Call the post message for the receiver with a parameter of '/github-stars'. Run the app, making sure to connect it to an ngrok server. Then, navigate to 'webhooks' in your Github repository settings. Create a webhook and set the payload URL to be the ngrok server URL with the parameter of the ExpressReceiver at the end. Copy and paste the secret value you create into the 'Secret' field. Lastly, select individual events and choose 'starred', then press 'update'.  Check the ngrok server in your terminal to see if the webhook connected successfully.
 
 
-
-## 🏁Challenge
-
-Your challenge for today is to implement the payload from the Github webhook to send a message in your Slack app. The payload will include whether a user deleted, starred, or unstarred the repository. Look for these datapoint, find which event occurred, and post it in a channel. 
-
-Good luck! If you need any help, feel free to reach out to either of your mentors.
 
 
 
