slack revised homework issues

--- a/Slack-Apps/week1/homework/responses/1.3-setup-app-and-learn-events.md
+++ b/Slack-Apps/week1/homework/responses/1.3-setup-app-and-learn-events.md
@@ -28,15 +28,23 @@ Afterwards, refer to the [following tutorial](https://ngrok.com/) on installing 
 
 Now that you have installed and ran ngrok, you can connect your local code to your app. Copy the ```forwarding link``` of the running server, then navigate to the ```event subscriptions``` page in your app menu. Enable events, then copy and paste your link in the 'Request URL' field, followed by /slack/events. If your URL is not verified, try running ngrok again and using the new link.
 
+![](./Gifs_Images/ngrok-link.gif)
+
+![](./Gifs_Images/event-url.gif)
+
 ### Event Subscriptions
 
 You have a connection, but the slack app still does not know what type of information to send you. One type of information is an event, which basically means when something happens. In the next issue, you will make a bot that needs to know when someone messages a specific word, like 'hello'. 
 
-Click on 'Subscribe to bot events', and select ```message.channels```, ```message.groups```, ```message.im```, and ```message.mpim```. All of these events listen for a posted message. Click save and then move on.  
+Click on 'Subscribe to bot events', and select ```message.channels```, ```message.groups```, ```message.im```, and ```message.mpim```. All of these events listen for a posted message. Click save and then move on:
+
+
+
+![](./Gifs_Images/event-subs-gif.gif)  
 
 ### Access Credentials
 
-The first thing you need to do is link your program to your app! The two peices of information you'll need to do this are a **slack bot token** and a **slack signing secret**. Refer to the gifs below to locate each of these properties from the Slack dashboard:
+The first thing you need to do is link your program to your app! The two pieces of information you'll need to do this are a **slack bot token** and a **slack signing secret**. Refer to the gifs below to locate each of these properties from the Slack dashboard:
 
 ![Finding the bot token](./Gifs_Images/slack-bot-token.gif)
 
@@ -48,9 +56,11 @@ Under OAuth & Permissions, scroll down to the **Bot Token Scopes** field and sel
 
 ## Downloading Slack Packages
 
-Now that you have the basics set up, you need to configure your **local app**. First call the following command:
+Now that you have the basics set up, you need to configure your **local app**. This will involve installing packages from Slack. A package is a bundle of various classes and interfaces that enable you to code without starting from scratch. You can download several packages for anything ranging from sending a text to creating graphs. In this issue, you will be downloading the bolt package, which lets you program a slack app more easily.
 
-```
+First call the following command:
+
+```javascript
 npm init
 ```
 
