--- a/Slack-Apps/week1/homework/responses/1.4-basic-slack-app.md
+++ b/Slack-Apps/week1/homework/responses/1.4-basic-slack-app.md
@@ -35,6 +35,8 @@ You will also be adding this snippet to be notified when the app runs:
 
 The previous issue went over how to select scopes and events. Choose the scope and event subscription you think fits best for this app. After you are done selecting, make sure that you have saved those subscriptions and installed them to the workspace. 
 
+> Hint: This app will be a bot that listens for and responds to specific text in chats
+
 ### Listening for a user
 
 In order to listen for new members, you will need to call app.event() in your javascript file. Here is the boilerplate for the function call:
