--- a/Slack-Apps/week4/homework/responses/4.3-final-project.md
+++ b/Slack-Apps/week4/homework/responses/4.3-final-project.md
@@ -54,7 +54,7 @@ This is the basic outline of what our app will do. It will listen on a server fo
 
 The first parameter in the post method is ```'/github-comments'```, which outlines the endpoint that the webhook payload is received at. This is similar to the ```'/slack/events'``` endpoint that is specified for event subscriptions. 
 
-In the last issue, you learned how to create a webhook. Select or create a GitHub repository and create a new webhook listening for comments. Remember to keep an ngrok server running and **update your slack app** to use the same link for interactivity and to listen for events. Append ```'/github-comments'``` to the ngrok link for the webhook payload URL. 
+In the [last issue](https://github.com/FifiTeklemedhin/BitCamp/blob/master/Slack-Apps/week4/homework/responses/4.2-webhooks.md), you learned how to create a webhook. Select or create a GitHub repository and create a new webhook listening for comments. Remember to keep an ngrok server running and **update your slack app** to use the same link for interactivity and to listen for events. Append ```'/github-comments'``` to the ngrok link for the webhook payload URL. 
 
 ## Messaging with Payload Information
 
