--- a/Slack-Apps/week4/homework/responses/4.2-webhooks.md
+++ b/Slack-Apps/week4/homework/responses/4.2-webhooks.md
@@ -18,14 +18,13 @@ Once you have created a repository, navigate to the settings page from the dashb
 
 ![](./Gifs:Images/4.2-secret.gif)
 
-Next, start your Slack app and create an ExpressReceiver object. Call the post message for the receiver with a parameter of '/github-stars'. Run the app, making sure to connect it to an ngrok server. Then, navigate to 'webhooks' in your Github repository settings. Create a webhook and set the payload URL to be the ngrok server URL with the parameter of the ExpressReceiver at the end. Copy and paste the secret value you create into the 'Secret' field. Lastly, select individual events and choose 'starred', then press 'update'.  Check the ngrok server in your terminal to see if the webhook connected successfully.
+Next, start your Slack app and create an ExpressReceiver object. Follow these steps:
+
+1. Call the post message for the receiver with a parameter of '/github-stars'. 
+2. Run the app, making sure to connect it to an ngrok server. Then, navigate to 'webhooks' in your Github repository settings. 
+3. Create a webhook and set the payload URL to be the ngrok server URL with the parameter of the ExpressReceiver at the end. 
+4. Copy and paste the secret value you create into the 'Secret' field. 
+5. Lastly, select individual events and choose 'starred', then press 'update'.  Check the ngrok server in your terminal to see if the webhook connected successfully.
 
 
-
-<<<<<<< HEAD
-
-
-
-=======
->>>>>>> 9a198601099836cb94db078100afe44ccd0d14cc
 
