--- a/Serverless-Functions/homework/responses/3.5-blog.md
+++ b/Serverless-Functions/homework/responses/3.5-blog.md
@@ -64,7 +64,7 @@ Finally, we'll reference jQuery.
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 
-<script src="face.js" type="text/javascript"></script>
+<script src="config.js" type="text/javascript"></script>
 ```
 
 To test your page out locally, first make sure you have [LiveServer](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) installed in VSCode. To start a local server, click `Go live` as shown below.
