week 2 hw and readme

--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -4,4 +4,9 @@
 
 #### Task 2: Styling the body
 
-In the body class, center all items, select a font and size for your text, and change the background color of the page.
+In your CSS file, define a body class and set the display to flex.  This will make sure all elements fit the screen appropriately. Next, use the `justify-content`  and `align-items` attributes to center your items on the y axis and the x axis respectively. You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
+
+Inside the body, you can also change the color of the background, as well as the color, font, and size of your text.  I recommend using the `font-family` attribute with a few backup fonts in case your browser doesn't support your font of choice.  You can add back up fonts by following your font with a comma and another font family or type. My font-family line looks like this:
+
+`font-family: "Trebuchet MS", Verdana, sans-serif;`
+
