--- a/Javascript/homework/responses/3.2-clock-digits.md
+++ b/Javascript/homework/responses/3.2-clock-digits.md
@@ -4,4 +4,12 @@
 
 #### Task 2: Adding numbers to your clock
 
-Define a clock class in a div separate from the timezone form, but still in the body of the code. Inside of this, define divs for numbers 1-12 and as well as divs for each hand on the clock.
+Inside of your clock div (which should be located inside of the body, but outside of the form) define three divs - these will represent the hands on our clock.  For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  For example, the div tag for the hour hand would look like:
+
+`<div class="hand hour" data-hour-hand></div>`
+
+Though this div-defining process seems complex, it will greatly simplify things when we design our clock in the CSS file.
+
+Next, we need to set up the numbers on our clock
+
+Inside of this, define divs for numbers 1-12 and as well as divs for each hand on the clock.
