--- a/Javascript/homework/responses/3.6-moving-hands.md
+++ b/Javascript/homework/responses/3.6-moving-hands.md
@@ -4,4 +4,7 @@
 
 #### Task 6: Getting your hands to move
 
+In order to get our hands to be able to rotate around the clock, we have to use a trick similar to the one we used for rotating the numbers on the clock.  In your CSS file, define a variable `--rotation` in your `.clock .hand` block.  This will serve to 
+
 Finally, move to the javascript file to set the hands to rotate around the clock given the current date and time
+
