--- a/Javascript/homework/responses/3.6-moving-hands.md
+++ b/Javascript/homework/responses/3.6-moving-hands.md
@@ -4,7 +4,56 @@
 
 #### Task 6: Getting your hands to move
 
-In order to get our hands to be able to rotate around the clock, we have to use a trick similar to the one we used for rotating the numbers on the clock.  In your CSS file, define a variable `--rotation` in your `.clock .hand` block.  This will serve to 
+In order to get our hands to be able to rotate around the clock, we have to use a trick similar to the one we used for rotating the numbers on the clock.  In your CSS file, define a variable `--rotation` in your `.clock .hand` block and initialize it to 0.  This will serve as a variable to hold the number of degrees our hand will be rotated at any given second. 
 
-Finally, move to the javascript file to set the hands to rotate around the clock given the current date and time
+To actually utilize this variable and make our hand rotate, add `rotate()` as a second parameter for your transform attribute, since transform handles object movement in CSS.  Inside of the parentheses of `rotate()`, use the `calc()` function and enter your variable * 1deg.  The calc function handles mathematical operations in CSS, so we're using it to basically convert our rotation variable, which is simply an integer, to a degree.  The `transform` line should now look like this:
 
+`transform: translate(-50%,0) rotate(calc(var(--rotation) * 1deg));`
+
+Now, if you set `--rotation` to 30 to test out this rotate tool, you'll see that the hand rotates with the center as its axis rather than its bottom end:
+
+![Screen Shot 2021-01-17 at 2.00.40 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 2.00.40 AM.png)
+
+To fix this, use the `transform-origin` attribute to change the position from which the hand is rotated to `bottom` like so:
+
+`transform-origin: bottom;`
+
+Now, your clock should look like this:
+
+![Screen Shot 2021-01-17 at 2.04.43 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 2.04.43 AM.png)
+
+Now that our hands are all set up, we can finally move onto the JavaScript portion of the code.
+
+You should have copied your JavaScript file from last week's assignment into the folder for this homework. Here, you should keep any functions for the timezone selection, and delete everything inside your function that prints the time.
+
+Inside your now-empty showTime() function, define a variable `const day` and initialize it to a `new Date()`, just as we did in last week's assignment. Next, initialize a new variable `const secondsRatio` to `day.getSeconds()/60`.  This variable and all those similarly named will be used to find the degree at which the corresponding hand will be rotated at any given second. We divide the seconds by 60 because there are 60 seconds in a minute, or 60 possible positions for the seconds hand to be in, since the second hand only changes position 60 times every minute.  This concept might be hard to wrap your head around at first, but the math isn't as important as the concepts.
+
+Next, we'll initialize a `const minutesRatio` variable.  Since we don't want our minute hand to jump positions every minute, we'll set this variable  to `(day.getMinutes() + secondsRatio) /60`.  By adding `secondsRatio`, we are including a percentage of a minute to our `minutesRatio`, which will allow the minute hand to gradually change positions every second.
+
+Similarly, for the `const hoursRatio` variable, we want to add in the `minutesRatio`, which also includes the `secondsRatio`, giving us an hour hand that moves every second.  Therefore, we'll set `hoursRatio` to `(day.getHours() + minutesRatio + offset) / 12` since there are 12 hours on the clock and we need to incorporate the offset from the timezone function.
+
+Now, we have to link the divs we used to design the hands to this JavaScript file.  To do this, define 3 global variables at the top of your JS file, right below your offset variable.  Name them `const hourHand`, `const minuteHand`, and `const secondHand` and set them equal to the respective hand's div's data attribute using the `document.querySelector` tool. For example, the line of code for the hour hand would be:
+
+`const hourHand = document.querySelector('[data-hour-hand]')`
+
+Once these three hands are defined, create a new function called `setRotation` that takes two parameters, an `element` and a `rotationRatio` so the definition will look like:
+
+`function setRotation(element, rotationRatio)`
+
+This function will take the elements that we just created that link to the hand divs and the ratio for rotation that we defined in our setClock function and link them to move the hands on the analog clock.
+
+Inside the function, add the line:
+
+``element.style.setProperty(`--rotation`, rotationRatio * 360)``
+
+This line will set the rotation property in our hand div to be equal to the rotationRatio * 360 which is the position for the hand given its rotationRatio.
+
+Now, we just need to call this function on our hands so scroll back up to the function that sets up your clock.  Below the second, minute, and hour ratio variable definitions, call setRotation 3 times, passing each hand element with its respective ratio, so the function call for the seconds hand would look like:
+
+`setRotation(secondHand, secondsRatio)`
+
+Finally, add a call to `setInterval` in global space at the top of your code to call your function that sets the time ever 1000 ms (or any 1 second).  The code looks like this: `setInterval(showTime, 1000)`
+
+As you may notice, the clock starts with all hands facing the 12 when we start the page because all hands are initialized to have a rotation variable equal to 0.  To fix this bug, simply call your `showTime` function once at the bottom of your code. 
+
+Now, when you refresh the page, the time will already be set on the clock. Also, thanks to the function you wrote in last week's code for the timezone selector, you shouldn't have to do any work to get this feature working on your analog clock!
