--- a/Javascript/homework/responses/4.2-more-buttons.md
+++ b/Javascript/homework/responses/4.2-more-buttons.md
@@ -1,7 +1,17 @@
-### Week 4 - Toggling between digital and analog clocks using advanced features
+### Week 4 - Toggling between digital and analog clocks and incoporating advanced features
 
 *For the final assignment, students will integrate all previous assignments into a single interface and add some bells and whistles.*
 
 #### Task 2: Adding radio buttons for clock preferences
 
-Next, create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock
+Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock.
+
+First, open another form tag directly below the one you have for the timezone selector.  Similar to how you set up the timezone buttons, open a div tag with a unique class (I named mine "view") and insert 2 radio buttons. Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
+
+These two radio buttons should have the user input whether they'd like to see the time on a digital clock or an analog clock.  There's no need to add a submit button as we will set up our page to change on the click of the radio button rather than on the submit button.
+
+After this step, your page should look like this:
+
+![Screen Shot 2021-01-17 at 9.31.52 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 9.31.52 PM.png)
+
+At this point, you can customize the appearance of these two radio buttons in your CSS file by defining a block that selects all items in your "view" class.  I suggest adding some margins and padding so that items don't look so crowded.
