--- a/Javascript/homework/responses/4.1-page-setup.md
+++ b/Javascript/homework/responses/4.1-page-setup.md
@@ -1,8 +1,25 @@
-### Week 4 - Toggling between digital and analog clocks using advanced features
+### Week 4 - Toggling between digital and analog clocks and incoporating advanced features
 
 *For the final assignment, students will integrate all previous assignments into a single interface and add some bells and whistles.*
 
 #### Task 1: Create a new page with an analog and a digital clock
 
-Using your code from weeks 2 and 3, design a page that shows both an analog clock and a digital clock
+Your final assignment is going to merge everything you've created so far onto a single webpage, and allow the user to choose between a digital clock and analog clock. 
 
+First off, copy your files from last week into your week 4 folder.  Next, add a div tag below your clock div (below the `</div>` tied to `<div class="clock">` ).  Make sure to give this tag a unique id attribute, my line of code looks like `<div class="digital" id="digital clock"></div>`.
+
+Next, copy the function you wrote for your digital clock in week 2 to show the time.  Paste the contents of this function into the function that sets the analog clock so that both clocks are set with a single function call.  Be sure to rename any repeating variables if necessary to get the function working.  Also, make sure to change the code you use to print the time to search for an element with `id="digital clock"`, so my line of code looks like `document.getElementById("digital clock").textContent = time;`. 
+
+At this point, your page should look something like this:![Screen Shot 2021-01-17 at 9.11.28 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 9.11.28 PM.png)
+
+Now, add a block in your css file that selects the `"digital"` class like so:
+
+`.digital {}` 
+
+You may choose to style your digital clock differently this time, but if not, feel free to copy the code from week 2's CSS file in the `.clock` section and paste it into your `.digital` section.
+
+Your page should now look something like this:
+
+![Screen Shot 2021-01-17 at 9.18.06 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 9.18.06 PM.png)
+
+Feel free to size down the digital clock so that it doesn't mess up your layout when you resize your screen.
