--- a/Javascript/homework/responses/4.3-more-js-functions.md
+++ b/Javascript/homework/responses/4.3-more-js-functions.md
@@ -1,7 +1,33 @@
-### Week 4 - Toggling between digital and analog clocks using advanced features
+### Week 4 - Toggling between digital and analog clocks and incoporating advanced features
 
 *For the final assignment, students will integrate all previous assignments into a single interface and add some bells and whistles.*
 
 #### Task 3: Toggling between a digital and an analog clock
 
-Set up your code so that, given the user’s input, one of the clock’s will be hidden and the selected one will be shown.
+Now that we have the page all set up, all that's left to do is to get our code to do what the webpage says!
+
+In your JavaScript file, define two functions - one called `setDigital()` and another called `setAnalog()` .  Inside of each of these functions, use `document.getElementById()` to define 2 variables that select the analog clock and the digital clock.  So, your code for the digital clock would look like this:
+
+`var digital = document.getElementById("digital clock")` 
+
+because my digital clock data is linked to a div tag with `id="digital clock"`.  Now, do the same thing for a variable that holds your analog clock data (if you copied your code from week 3, the id for your analog clock should be `"clock"`).
+
+Next, we're going to use these variables to change their display so that only one will be shown at a time.  In `setAnalog()`, set `analog.style.display` to `"flex"` so the code should look like:
+
+`analog.style.display = "flex"`
+
+Similarly, set the digital clock object's display to `"none"`.  This code will override the current CSS display settings to hide the digital clock and hide the analog clock.
+
+Use the same methodology to hide the analog clock and show the digital clock in your `setDigital()` function.
+
+Finally, we just have to link these functions to the radio buttons.  Back in your HTML code, add the `onclick` attribute to both input fields.  In the input field for the analog clock, set this attribute to `"setAnalog()"` , and. by the same logic, set the digital clock button's `onclick` attribute to `"setDigital()"`.  This is the same way we linked a function to the submit button, so feel free to refer to that code for help.
+
+Now, if you click the "Analog" button, your screen should look like this:
+
+![Screen Shot 2021-01-17 at 10.55.15 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 10.55.15 PM.png)
+
+And if you click the "Digital" button, it will look like this:
+
+![Screen Shot 2021-01-17 at 10.55.26 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 10.55.26 PM.png)
+
+However, you may notice that when you first load your page, both clocks appear.  To fix this, add the `checked` attribute to the input field tag for the analog clock's radio button so that this button will be selected when the field loads.  Then, in your JavaScript file, call the `setAnalog()` function after it's defined.
