--- a/Javascript/homework/responses/1.1-setup.md
+++ b/Javascript/homework/responses/1.1-setup.md
@@ -10,4 +10,4 @@ Once installed, open the application and create a new folder for this class.  In
 
 After you've opened this file, type "html" in the editor and select the shortcut "html:5".  This will automatically type out some mandatory HTML syntax for you.
 
-When your file is all set up, add a title and make your page print "Hello World!"
+When your file is all set up, add a title by typing <title>put your title here<title> within the <head> section and make sure within your <body> section thats it prints "Hello World!"
