--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -6,7 +6,7 @@
 
 Now that we've set up the form, we need to grab the user's input; we'll do this using JavaScript. 
 
-Outside of the form, but still in the body, open the `script` tag with the `type` attribute set to `"text/javascript"`.  Inside here, define a function to print the user's selection from the timezone form.  You can do this by looping through the radio buttons and seeing if the `checked` attribute is true.
+Outside of the form, but still in the body, open the `script` tag with the `type` attribute set to `"text/javascript"`. To open the script tag you would type <script type="">  Inside here, define a function to print the user's selection from the timezone form.  You can do this by looping through the radio buttons and seeing if the `checked` attribute is true.
 
 Once you find the checked radio button, save it to a variable.  Next, use `document.getElementById().innerHTML` and place the id of the div you defined below the submit button in the parentheses.  Set this line equal to the variable holding the checked radio button to print it onto your webpage.  For example, I set my div's id to `"result"` and named my variable `output` and my code looked like this:
 
