--- a/Javascript/homework/responses/3.5-clock-hands.md
+++ b/Javascript/homework/responses/3.5-clock-hands.md
@@ -4,7 +4,7 @@
 
 #### Task 5: Designing the hands of your clock
 
-Inside of your clock div define three divs - these will represent the hands on our clock.  For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  For example, the div tag for the hour hand would look like:
+Within your clock div you're going to include three more divsions. - these will represent the hands on our clock.  For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  For example, the div tag for the hour hand would look like:
 
 `<div class="hand hour" data-hour-hand></div>`
 
