updating week 1 homeworks

--- a/Javascript/homework/responses/1.1-setup.md
+++ b/Javascript/homework/responses/1.1-setup.md
@@ -1,8 +1,10 @@
-### Week 1 - Printing the time using JS and HTML 
+# Week 1 - Printing the time using JS and HTML 
 
 *In this assignment, students will gain a thorough understanding of basic HTML syntax as well as JavaScript functions to print out the current time given some user input* 
 
-#### Task 1: Environment setup and starting your first HTML file
+## Task 1: Environment setup and starting your first HTML file
+
+*In this task, you'll be setting up your computer to get ready to code.  We'll also show you how to create a simple HTML file.*
 
 If you have not already set up your environment for this course, be sure to watch the loom video (this is where I'd add a link to the video I'm gonna create about setting up your environment) and download [Microsoft Visual Studio Code](https://code.visualstudio.com/Download) for your machine. 
 
@@ -11,3 +13,11 @@ Once installed, open the application and create a new folder for this class.  In
 After you've opened this file, type "html" in the editor and select the shortcut "html:5".  This will automatically type out some mandatory HTML syntax for you.
 
 When your file is all set up, add a title by typing <title>put your title here<title> within the <head> section and make sure within your <body> section thats it prints "Hello World!"
+
+#### Open a pull request for your code
+
+Once you've completed this task, be sure create a new branch titled `[your GitHub username]-[week]-[task number]`.  For example my GitHub username is `danzelo1` so my branch name for week 1's first task (this assignment) would be `danzelo1-1-1`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (so this week would be week 1). A new comment should have appeared for your next task. This is where you'll find the instructions for task 2.
