--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -1,8 +1,6 @@
-### Week 1 - Printing the time using JS and HTML 
+## Task 5: Changing your clock based on user input
 
-*In this assignment, students will gain a thorough understanding of basic HTML syntax as well as JavaScript functions to print out the current time given some user input*
-
-#### Task 5: Changing your clock based on user input
+*Now we'll show you how to write a JavaScript function that takes the user's input from the radio button and prints the time in the timezone they selected.*
 
 Finally, let's integrate the functions we wrote to produce a clock that changes given a selected timezone.
 
@@ -13,3 +11,11 @@ Now, scroll down to the function you wrote to find the selected timezone. Using 
 Once you've set up your conditionals, revisit your function that sets your clock.  In the line where you define your variable that holds your current hour, add `+ offset` so that the offset is added to whatever hour your computer's clock is set to and then that new hour is saved to the hour variable.
 
 Finally, call the function that sets your clock at the end of your function that changes the timezone so that the time gets updated. Now, your clock should change when you select a timezone and hit submit.
+
+#### Open a pull request for your code
+
+Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  As a reminder my GitHub username is `danzelo1` so my branch name for week 1's third task (this assignment) would be `danzelo1-1-3`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. This is the last task for week 1 so there's nothing else for you to do from here.  Until next week!
