--- a/Javascript/homework/responses/1.2-buttons.md
+++ b/Javascript/homework/responses/1.2-buttons.md
@@ -1,8 +1,6 @@
-### Week 1 - Printing the time using JS and HTML 
+## Task 2: Getting user input with buttons
 
-*In this assignment, students will gain a thorough understanding of basic HTML syntax as well as JavaScript functions to print out the current time given some user input*
-
-#### Task 2: Getting user input with buttons.
+*For task 2, we'll go over how to insert a radio button, or an option button, as well as a regular button.*
 
 Next, lets set up a form for a user to select their timezone for the clock we're going to build.  To do this, we'll use radio buttons - these are the type of buttons that you'd associate with a multiple choice question - there are a few different options to select, but, since we only want to show one time, we only want the user to be able to select one of these buttons.
 
@@ -13,3 +11,11 @@ Once you've set up your input fields, feel free to add some labels and breaks to
 Whenever we want to take in some user input involving input fields and a submit button, we want to make sure to group our relevant code in the `form` tag so that the computer knows what to look for.  With that being said, make sure to surround your code related to the input fields and submit button with a form tag.
 
 Finally, add a break and a `div` tag with a unique `id` right below the submit button.  We will use this later to print the selected timezone.
+
+#### Open a pull request for your code
+
+Just as you did for the last task, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  As a reminder my GitHub username is `danzelo1` so my branch name for week 1's second task (this assignment) would be `danzelo1-1-2`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (so this week would be week 1). A new comment should have appeared for your next task. This is where you'll find the instructions for task 3.
