--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -1,10 +1,6 @@
-### Week 1 - Printing the time using JS and HTML 
+## Task 3: Using JavaScript to read user input
 
-*In this assignment, students will gain a thorough understanding of basic HTML syntax as well as JavaScript functions to print out the current time given some user input*
-
-#### Task 3: Using JavaScript to read user input.
-
-Now that we've set up the form, we need to grab the user's input; we'll do this using JavaScript. 
+*Now that we've set up the form, we'll use JavaScript to grab the user's input for us to use in our code.*
 
 Outside of the form, but still in the body, open the `script` tag with the `type` attribute set to `"text/javascript"`. To open the script tag you would type <script type="">  Inside here, define a function to print the user's selection from the timezone form.  You can do this by looping through the radio buttons and seeing if the `checked` attribute is true.
 
@@ -17,3 +13,11 @@ Finally, you'll want to scroll up to your submit button and add the `onclick` at
 `<button type="button" value="Submit" onclick="ValidateForm()"> Submit </button>`
 
 Now, your page should print out the value of whichever item the user has selected when they click the submit button.
+
+#### Open a pull request for your code
+
+Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  As a reminder my GitHub username is `danzelo1` so my branch name for week 1's third task (this assignment) would be `danzelo1-1-3`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (so this week would be week 1). A new comment should have appeared for your next task. This is where you'll find the instructions for task 4.
