--- a/Javascript/homework/responses/1.4-date.md
+++ b/Javascript/homework/responses/1.4-date.md
@@ -1,8 +1,6 @@
-### Week 1 - Printing the time using JS and HTML 
+## Task 4: Printing the time with JS
 
-*In this assignment, students will gain a thorough understanding of basic HTML syntax as well as JavaScript functions to print out the current time given some user input*
-
-#### Task 4: Printing the time with JS
+*In this task, we'll show you how to print your local machine's time onto your webpage using some basic JS tools.*
 
 Next, we will print the time on your local machine onto the webpage with a simple JavaScript function.
 
@@ -19,3 +17,11 @@ Lastly, to print your clock, add a break and a div tag outside of your form tags
 Now, you should have a working digital clock and a form that prints the item selected!
 
 P.S. Don't forget call your clock function once at the bottom of your script!
+
+#### Open a pull request for your code
+
+Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  As a reminder my GitHub username is `danzelo1` so my branch name for week 1's fourth task (this assignment) would be `danzelo1-1-4`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (so this week would be week 1). A new comment should have appeared for your next task. This is where you'll find the instructions for task 5.
