updating week 2 homeworks

--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -1,12 +1,22 @@
-### Week 2 - Designing a digital clock using CSS
+# Week 2 - Designing a digital clock using CSS
 
 *In this week's assignment, students will build off of last weeks work and style their existing webpage to produce a more aesthetically pleasing digital clock.*
 
-#### Task 1: Linking your CSS file
+## Task 1: Linking your CSS file
+
+*How to begin a CSS file and link it to your HTML file.*
 
 This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.  First, copy your index.html file into a new html file in your week 2 homework folder.
 
 To style our webpage, we must link a css file to our HTML file.  To do this, add a `link` tag inside the head of your html file. This tag should have the `rel` attribute set to `"stylesheet"` and the `href` attribute set to `"style.css"`.
 
 Next, open a new file in your week 2 folder and save it as `style.css`. It's important that your file name matches the one you typed in your HTML document in its link tag's `href` attribute, as this will be what links your two files.
+
+#### Open a pull request for your code
+
+Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  For example, my GitHub username is `danzelo1` so my branch name for week 2's first task (this assignment) would be `danzelo1-2-1`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (so this week would be week 2). A new comment should have appeared for your next task. This is where you'll find the instructions for task 2.
 
