--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -1,8 +1,6 @@
-### Week 2 - Designing a digital clock using CSS
+## Task 3: Creating your clock
 
-*In this week's assignment, students will build off of last weeks work and style their existing webpage to produce a more aesthetically pleasing digital clock.*
-
-#### Task 3: Creating your clock
+*For the third task, we're going to begin designing a digital clock using some basic styling techniques.*
 
 After you're satisfied with the body of your page, define a block that styles elements in the `clock` class.
 
@@ -22,3 +20,10 @@ The first number in each line represents the x-offset which is the horizontal di
 
 Lastly is the color.  I used the `rgba()` tool to define my color.  The first 3 numbers represent the amount of red, green, and blue in the color, respectively. The fourth number is the opacity on a scale from 0 to 1, with 0 being complete transparency and 1 being fully opaque.
 
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week. A new comment should have appeared for your next task where you'll find the instructions for task 4.
