--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -1,8 +1,6 @@
-### Week 2 - Designing a digital clock using CSS
+## Task 2: Styling the body
 
-*In this week's assignment, students will build off of last weeks work and style their existing webpage to produce a more aesthetically pleasing digital clock.*
-
-#### Task 2: Styling the body
+*In this task, we'll go over how to style the text in your body tag.*
 
 In your CSS file, define a body class and set the display to flex.  This will make sure all elements fit the screen appropriately. Next, use the `justify-content`  and `align-items` attributes to center your items on the y axis and the x axis respectively. You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
 
@@ -10,3 +8,10 @@ Inside the body, you can also change the color of the background, as well as the
 
 `font-family: "Trebuchet MS", Verdana, sans-serif;`
 
+#### Open a pull request for your code
+
+Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  For example, my GitHub username is `danzelo1` so my branch name for week 2's second task (this assignment) would be `danzelo1-2-2`.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  When creating this request, be sure to title it appropriately in accordance with your changes, and include any specific details in your comments.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (so this week would be week 2). A new comment should have appeared for your next task. This is where you'll find the instructions for task 3.
