js week 3 hw formatting

--- a/Javascript/homework/responses/3.1-integrating-code.md
+++ b/Javascript/homework/responses/3.1-integrating-code.md
@@ -1,8 +1,10 @@
-### Week 3 - Constructing an analog clock using HTML, JS, and CSS
+# Week 3 - Constructing an analog clock using HTML, JS, and CSS
 
 *Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
 
-#### Task 1: Gathering your existing code
+## Task 1: Gathering your existing code
+
+*This step will simply guide you through starting a JavaScript file and copying your code from last week's assignment.*
 
 Open new css and html in visual studio code in your week 3 folder.  This week will involve a little more JavaScript code, so you may want to make a separate JS file this time.  You can save it as "script.js" and link this file to your HTML file by adding the following line in your head, right below your CSS file link:
 
@@ -16,3 +18,10 @@ If you've copied and filtered all your code correctly, this is what your page sh
 
 ![Screen Shot 2021-01-15 at 8.11.26 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-15 at 8.11.26 PM.png)
 
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  For reference, my username is `danzelo1` so my branch would be titled `danzelo1-3-1` for this task.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 3). A new comment should have appeared for your next task where you'll find the instructions for task 2.
