--- a/Javascript/homework/responses/3.3-clock-digits.md
+++ b/Javascript/homework/responses/3.3-clock-digits.md
@@ -1,8 +1,6 @@
-### Week 3 - Constructing an analog clock using HTML, JS, and CSS
+## Task 3: Adding numbers to your clock
 
-*Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
-
-#### Task 3: Adding numbers to your clock
+*We'll use HTML and CSS in this step to print numbers on your clock and get them ready for positioning.*
 
 Next, we need to set up the numbers on our clock. Go back to the HTML document and define divs for numbers 1-12 inside the clock div tags. Name the classes for these divs "number number[digit]" so for the first digit, the tag would look like: 
 
@@ -23,3 +21,11 @@ At this point your clock should look something like this:
 ![Screen Shot 2021-01-16 at 2.16.29 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 2.16.29 AM.png)
 
 You'll notice that the numbers overlap in one spot and you can't read them.  In the next step we'll use rotation tools to change the positioning of each digit on the clock.
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task. 
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 3). A new comment should have appeared for your next task where you'll find the instructions for task 4.
