--- a/Javascript/homework/responses/3.4-rotation.md
+++ b/Javascript/homework/responses/3.4-rotation.md
@@ -1,8 +1,6 @@
-### Week 3 - Constructing an analog clock using HTML, JS, and CSS
+## Task 4: Using rotation to align the numbers on your clock
 
-*Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
-
-#### Task 4: Using rotation to align the numbers on your clock
+*In this task, we'll walk you through how to use variables in CSS, as well as how to use a built-in CSS function to rotate your numbers so that they're in the right position on your clock.*
 
 To move the digits to their respective positions on the clock, we could individually position them using the `top` and `left` attributes, but this would be a very tedious task.  Instead, we're going to use a trick to change the position of each digit using the `rotate()` tool in the `transform` attribue.
 
@@ -34,3 +32,10 @@ Now, your clock should look something like this:
 
 *Don't forget to delete the border from `.clock .number` after this step if you included it earlier.*
 
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task. 
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 3). A new comment should have appeared for your next task where you'll find the instructions for task 5.
