--- a/Javascript/homework/responses/3.5-clock-hands.md
+++ b/Javascript/homework/responses/3.5-clock-hands.md
@@ -1,8 +1,6 @@
-### Week 3 - Constructing an analog clock using HTML, JS, and CSS
+## Task 5: Designing the hands of your clock
 
-*Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
-
-#### Task 5: Designing the hands of your clock
+*We'll go over some more CSS tricks in this step to get the hands of your clock in position for time-telling.*
 
 Within your clock div you're going to include three more divsions. - these will represent the hands on our clock.  For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  For example, the div tag for the hour hand would look like:
 
@@ -43,3 +41,11 @@ Now, your clock should look something like this:
 To make sure that the second hand is always on top set it's `z-index` attribute to 12.  Similarly, we'll want the hour hand to always be on the bottom and the minute hand in the middle so set their `z-index` attributes to 10 and 11 respectively.  We'll also want the small circle in the center of the clock to always be on top of all of the hands to hide the overlap so we can set the `z-index` in `clock::after` to 100.  This attribute defines the order in which items will appear on the z-axis, so items with a higher z-index will appear to sit on top of items with a lower z-index.
 
 Now that we have all of the styling done for the clock, it's time to get the hands moving!
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task. 
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 3). A new comment should have appeared for your next task where you'll find the instructions for task 6.
