--- a/Javascript/homework/responses/3.6-moving-hands.md
+++ b/Javascript/homework/responses/3.6-moving-hands.md
@@ -1,8 +1,6 @@
-### Week 3 - Constructing an analog clock using HTML, JS, and CSS
+## Task 6: Getting your hands to move
 
-*Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
-
-#### Task 6: Getting your hands to move
+*We'll add some final touches to your CSS file so that your hands rotate correctly and then get to work on your JavaScript so that your clock can do what clocks do.*
 
 In order to get our hands to be able to rotate around the clock, we have to use a trick similar to the one we used for rotating the numbers on the clock.  In your CSS file, define a variable `--rotation` in your `.clock .hand` block and initialize it to 0.  This will serve as a variable to hold the number of degrees our hand will be rotated at any given second. 
 
@@ -57,3 +55,11 @@ Finally, add a call to `setInterval` in global space at the top of your code to 
 As you may notice, the clock starts with all hands facing the 12 when we start the page because all hands are initialized to have a rotation variable equal to 0.  To fix this bug, simply call your `showTime` function once at the bottom of your code. 
 
 Now, when you refresh the page, the time will already be set on the clock. Also, thanks to the function you wrote in last week's code for the timezone selector, you shouldn't have to do any work to get this feature working on your analog clock!
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task. 
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. And thats a wrap for week three!
