--- a/Javascript/homework/responses/3.2-clock-styling.md
+++ b/Javascript/homework/responses/3.2-clock-styling.md
@@ -1,8 +1,6 @@
-### Week 3 - Constructing an analog clock using HTML, JS, and CSS
+## Task 2: Building the background of your clock
 
-*Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
-
-#### Task 2: Building the background of your clock
+*In this task, we'll cover some tips and tricks to get your clock shaped and positioned correctly on your page.*
 
 Inside of your HTML file, make sure you have a div with its class set to `"clock"`.  This div should be defined after your form ends, but still inside the body tags.
 
@@ -39,3 +37,11 @@ This is because the object is aligned with its position relative to the left and
 This will translate the item 50% of its width to the left, and 50% of its width upwards.  Now your clock should look like this:
 
 ![Screen Shot 2021-01-16 at 2.06.44 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 2.06.44 AM.png)
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  For reference, my username is `danzelo1` so my branch would be titled `danzelo1-3-2` for this task.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 3). A new comment should have appeared for your next task where you'll find the instructions for task 3.
